--- a/index.html
+++ b/index.html
@@ -1,130 +1,167 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chérie de Cognac | Niche Perfume by LEO (강지혁)</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chérie de Cognac | by LEO (강지혁)</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Noto+Serif+KR:wght@400;600&display=swap');
 
-    :root{
-      --gold:#d9b36a;
-      --bg:#0c0b09;
+    :root {
+      --gold: #d9b36a;
+      --bg: #0c0b09;
     }
 
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:'Noto Serif KR', serif;
-      color:#f5f5f5;
-      background:var(--bg);
-      overflow-x:hidden;
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Noto Serif KR', serif;
+      color: #f5f5f5;
+      background: var(--bg);
+      text-align: center;
+      line-height: 1.8;
     }
 
-    /* HERO */
-    header{
-      min-height:100vh;
-      display:flex;flex-direction:column;align-items:center;justify-content:center;
-      text-align:center;padding:0 20px;
-      background:
-        linear-gradient(rgba(12,11,9,.65), rgba(12,11,9,.88)),
-        url('https://cdn.pixabay.com/photo/2016/11/21/15/46/perfume-1845750_1280.jpg?ver=3') center/cover no-repeat;
+    header {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.9)),
+      url('https://images.unsplash.com/photo-1600185365926-3a2ce0d63b74?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
     }
-    h1{font-family:'Playfair Display',serif;font-size:3.2rem;margin:0 0 .3rem}
-    .sub{color:var(--gold);font-size:1.05rem;opacity:.95}
 
-    .btn{
-      margin-top:22px;padding:10px 24px;border-radius:26px;
-      border:1px solid var(--gold);color:var(--gold);background:transparent;
-      font-size:1rem;cursor:pointer;transition:.25s;
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3.2rem;
+      color: #fff;
+      margin-bottom: 0.4rem;
     }
-    .btn:hover{background:var(--gold);color:#111}
 
-    /* CONTENT */
-    section{max-width:980px;margin:80px auto;padding:0 20px;text-align:center;line-height:1.9}
-    h2.sec{color:var(--gold);font-weight:600;font-size:1.15rem;margin-bottom:14px}
-    p.lead{color:#d9d9d9}
+    .sub {
+      color: var(--gold);
+      font-size: 1.1rem;
+    }
 
-    .notes{
-      display:grid;gap:28px;margin-top:54px;
-      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    .btn {
+      margin-top: 25px;
+      padding: 10px 25px;
+      border: 1px solid var(--gold);
+      border-radius: 30px;
+      background: transparent;
+      color: var(--gold);
+      cursor: pointer;
+      transition: 0.3s;
     }
-    .card{
-      background:rgba(255,255,255,.05);
-      border:1px solid rgba(217,179,106,.4);
-      border-radius:16px;padding:20px 20px 24px;
-      backdrop-filter:blur(6px);
-    }
-    .card h3{margin:.2rem 0 0.6rem;font-family:'Playfair Display',serif;color:var(--gold)}
-    .card small{display:block;color:#bfbfbf;margin-bottom:10px}
-    .card img{width:100%;border-radius:10px;margin-bottom:12px;display:block}
 
-    footer{
-      text-align:center;padding:40px 16px;margin-top:60px;
-      color:#9a9a9a;border-top:1px solid rgba(255,255,255,.1);font-size:.92rem
+    .btn:hover {
+      background: var(--gold);
+      color: #111;
     }
-    footer span{color:var(--gold)}
+
+    section {
+      max-width: 950px;
+      margin: 70px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      color: var(--gold);
+      margin-bottom: 15px;
+      font-family: 'Playfair Display', serif;
+      font-size: 1.3rem;
+    }
+
+    p {
+      color: #ccc;
+      margin-bottom: 40px;
+    }
+
+    .notes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+    }
+
+    .card {
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(217,179,106,0.4);
+      border-radius: 14px;
+      padding: 20px;
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 12px;
+    }
+
+    .card h3 {
+      color: var(--gold);
+      margin-bottom: 8px;
+      font-family: 'Playfair Display', serif;
+    }
+
+    footer {
+      margin-top: 60px;
+      padding: 25px;
+      color: #999;
+      border-top: 1px solid rgba(255,255,255,0.1);
+      font-size: 0.9rem;
+    }
+
+    footer span {
+      color: var(--gold);
+    }
   </style>
 </head>
 <body>
 
-  <!-- HERO -->
   <header>
     <h1>Chérie de Cognac</h1>
-    <div class="sub">달콤함 속에 잠긴 깊이, 사랑처럼 남는 잔향</div>
-    <button class="btn" onclick="playFire()">🔊 Listen</button>
+    <p class="sub">달콤함 속에 잠긴 깊이, 사랑처럼 남는 잔향</p>
+    <button class="btn" onclick="playSound()">🔊 Listen</button>
   </header>
 
-  <!-- AUDIO (캐시버스터 v=3) -->
-  <audio id="fireSound" preload="auto" loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/09/audio_9eec859e40.mp3?filename=fireplace-ambient-110608.mp3&v=3" type="audio/mpeg">
+  <audio id="fireSound" autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/09/audio_9eec859e40.mp3?filename=fireplace-ambient-110608.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- ABOUT -->
   <section>
-    <h2 class="sec">About the Perfume</h2>
-    <p class="lead">
-      한 모금의 체리 리큐르, 그리고 오크 배럴에 잠든 꼬냑. 달콤함과 깊이가 맞닿는 순간, 붉은 빛의 향이 깨어난다.
-      <strong>Chérie de Cognac</strong>은 사랑의 여운처럼 부드럽고, 빗방울처럼 투명하며, 마지막엔 나무의 숨결로 기억된다.
-      체리의 생동감, 장미와 자스민의 우아함, 패츌리와 베티버의 깊이가 하나의 서사로 이어진다.
-    </p>
+    <h2>About the Perfume</h2>
+    <p>한 모금의 체리 리큐르, 그리고 오크 배럴에 잠든 꼬냑. 달콤함과 깊이가 맞닿는 순간, 붉은 빛의 향이 깨어난다.
+      <strong>Chérie de Cognac</strong>은 사랑의 여운처럼 부드럽고, 빗방울처럼 투명하며, 마지막엔 나무의 숨결로 기억된다.</p>
 
-    <!-- NOTES -->
     <div class="notes">
       <div class="card">
-        <small>Top Note</small>
-        <img src="https://images.unsplash.com/photo-1571942399820-bc6cdb9b5f4e?auto=format&fit=crop&w=800&q=80" alt="체리와 베르가못">
+        <img src="https://images.unsplash.com/photo-1556228720-195a672e8a03?auto=format&fit=crop&w=800&q=80" alt="Top Note">
         <h3>Top Notes</h3>
-        <p>체리, 포레스트, 베르가못 — 청량한 달콤함으로 시작되는 첫인상.</p>
+        <p>체리, 포레스트, 베르가못 — 청량한 달콤함으로 시작되는 첫 향.</p>
       </div>
-
       <div class="card">
-        <small>Middle Note</small>
-        <img src="https://images.unsplash.com/photo-1520939817895-060bdaf4fe3d?auto=format&fit=crop&w=800&q=80" alt="로즈 드 메이, 자스민, 레인, 꼬냑, 그린티">
+        <img src="https://images.unsplash.com/photo-1520939817895-060bdaf4fe3d?auto=format&fit=crop&w=800&q=80" alt="Middle Note">
         <h3>Heart Notes</h3>
-        <p>로즈 드 메이, 자스민, 레인, 꼬냑, 그린티 — 촉촉한 장밋빛에 따뜻한 꼬냑의 숨결.</p>
+        <p>로즈 드 메이, 자스민, 레인, 꼬냑, 그린티 — 부드럽고 따뜻한 중심의 향.</p>
       </div>
-
       <div class="card">
-        <small>Base Note</small>
-        <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=800&q=80" alt="패츌리, 베티버, 통카빈, 구아이악우드">
+        <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=800&q=80" alt="Base Note">
         <h3>Base Notes</h3>
-        <p>패츌리, 베티버, 통카빈, 구아이악우드 — 깊고 포근한 우디 잔향.</p>
+        <p>패츌리, 베티버, 통카빈 — 잔잔히 남는 우디한 잔향.</p>
       </div>
     </div>
   </section>
 
   <footer>
-    Designed with passion by <span>LEO (강지혁)</span><br>
-    © 2025 Chérie de Cognac. All Rights Reserved.
+    Designed by <span>LEO (강지혁)</span> · © 2025 Chérie de Cognac
   </footer>
 
   <script>
-    // 모바일/데스크톱 공통: 버튼 클릭 시 즉시 재생
-    function playFire(){
+    function playSound(){
       const audio = document.getElementById('fireSound');
-      audio.play().catch(()=>{ /* 사용자 상호작용 필요시 무시 */ });
+      audio.muted = false;
+      audio.play().catch(()=>{});
     }
   </script>
+
 </body>
 </html>
