--- a/index.html
+++ b/index.html
@@ -1,167 +1,170 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chérie de Cognac | by LEO (강지혁)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chérie de Cognac</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Noto+Serif+KR:wght@400;500&display=swap" rel="stylesheet" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Noto+Serif+KR:wght@400;600&display=swap');
-
-    :root {
-      --gold: #d9b36a;
-      --bg: #0c0b09;
-    }
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
+      margin: 0;
       font-family: 'Noto Serif KR', serif;
-      color: #f5f5f5;
-      background: var(--bg);
+      color: #f5f0e6;
+      background-color: #0c0b09;
       text-align: center;
-      line-height: 1.8;
+      overflow-x: hidden;
     }
 
-    header {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.9)),
-      url('https://images.unsplash.com/photo-1600185365926-3a2ce0d63b74?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+    /* 배경 이미지 */
+    .background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://images.unsplash.com/photo-1529927066849-6e200379ec10?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+      filter: brightness(0.4) blur(2px);
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 2s ease-in-out;
+    }
+
+    .background.loaded {
+      opacity: 1;
     }
 
     h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 3.2rem;
-      color: #fff;
-      margin-bottom: 0.4rem;
+      font-size: 3em;
+      color: #e0b85d;
+      margin-top: 100px;
     }
 
-    .sub {
-      color: var(--gold);
-      font-size: 1.1rem;
+    .subtitle {
+      font-size: 1em;
+      color: #d4af37;
+      margin-bottom: 20px;
     }
 
-    .btn {
-      margin-top: 25px;
-      padding: 10px 25px;
-      border: 1px solid var(--gold);
-      border-radius: 30px;
+    .listen-btn {
       background: transparent;
-      color: var(--gold);
+      border: 1px solid #d4af37;
+      color: #d4af37;
+      padding: 10px 25px;
+      border-radius: 25px;
+      font-size: 1em;
       cursor: pointer;
-      transition: 0.3s;
+      transition: all 0.3s;
     }
 
-    .btn:hover {
-      background: var(--gold);
-      color: #111;
+    .listen-btn:hover {
+      background: #d4af37;
+      color: #0c0b09;
     }
 
     section {
-      max-width: 950px;
-      margin: 70px auto;
-      padding: 0 20px;
-    }
-
-    h2 {
-      color: var(--gold);
-      margin-bottom: 15px;
-      font-family: 'Playfair Display', serif;
-      font-size: 1.3rem;
-    }
-
-    p {
-      color: #ccc;
-      margin-bottom: 40px;
+      margin: 100px auto;
+      max-width: 900px;
+      line-height: 1.7;
+      font-size: 1rem;
     }
 
     .notes {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 60px;
     }
 
-    .card {
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(217,179,106,0.4);
-      border-radius: 14px;
+    .note {
+      width: 250px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #a37c27;
+      border-radius: 15px;
       padding: 20px;
+      box-shadow: 0 0 10px rgba(212, 175, 55, 0.2);
     }
 
-    .card img {
+    .note img {
       width: 100%;
+      height: 200px;
+      object-fit: cover;
       border-radius: 10px;
-      margin-bottom: 12px;
+      margin-bottom: 15px;
     }
 
-    .card h3 {
-      color: var(--gold);
+    .note h3 {
+      color: #e0b85d;
       margin-bottom: 8px;
       font-family: 'Playfair Display', serif;
     }
 
-    footer {
-      margin-top: 60px;
-      padding: 25px;
+    .footer {
+      margin: 60px 0 30px;
       color: #999;
-      border-top: 1px solid rgba(255,255,255,0.1);
-      font-size: 0.9rem;
-    }
-
-    footer span {
-      color: var(--gold);
+      font-size: 0.85em;
     }
   </style>
 </head>
 <body>
+  <div class="background" id="bg"></div>
 
   <header>
     <h1>Chérie de Cognac</h1>
-    <p class="sub">달콤함 속에 잠긴 깊이, 사랑처럼 남는 잔향</p>
-    <button class="btn" onclick="playSound()">🔊 Listen</button>
+    <p class="subtitle">Niche Perfume by LEO (강지혁)</p>
+    <button class="listen-btn" id="listenBtn">🎧 Listen</button>
   </header>
 
-  <audio id="fireSound" autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/09/audio_9eec859e40.mp3?filename=fireplace-ambient-110608.mp3" type="audio/mpeg">
-  </audio>
-
   <section>
-    <h2>About the Perfume</h2>
-    <p>한 모금의 체리 리큐르, 그리고 오크 배럴에 잠든 꼬냑. 달콤함과 깊이가 맞닿는 순간, 붉은 빛의 향이 깨어난다.
-      <strong>Chérie de Cognac</strong>은 사랑의 여운처럼 부드럽고, 빗방울처럼 투명하며, 마지막엔 나무의 숨결로 기억된다.</p>
+    <p>
+      한 모금의 체리 리큐르, 코냑의 따스한 잔향, 그리고 비 내린 밤의 투명한 슬픔.  
+      <strong>Chérie de Cognac</strong>은 시간과 감정을 향으로 녹여낸 감각적 니치 퍼퓸입니다.
+    </p>
 
     <div class="notes">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1556228720-195a672e8a03?auto=format&fit=crop&w=800&q=80" alt="Top Note">
+      <div class="note">
+        <img src="https://images.unsplash.com/photo-1613323592371-8c579e1d9f1b?auto=format&fit=crop&w=500&q=80" alt="Top Notes" />
         <h3>Top Notes</h3>
-        <p>체리, 포레스트, 베르가못 — 청량한 달콤함으로 시작되는 첫 향.</p>
+        <p>체리, 베르가못, 포레스트 미스트 — 달콤함과 신선함의 조화.</p>
       </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1520939817895-060bdaf4fe3d?auto=format&fit=crop&w=800&q=80" alt="Middle Note">
+      <div class="note">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=500&q=80" alt="Heart Notes" />
         <h3>Heart Notes</h3>
-        <p>로즈 드 메이, 자스민, 레인, 꼬냑, 그린티 — 부드럽고 따뜻한 중심의 향.</p>
+        <p>로즈 드 메이, 자스민, 레인 — 부드럽고 따뜻한 중심의 향.</p>
       </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=800&q=80" alt="Base Note">
+      <div class="note">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=500&q=80" alt="Base Notes" />
         <h3>Base Notes</h3>
-        <p>패츌리, 베티버, 통카빈 — 잔잔히 남는 우디한 잔향.</p>
+        <p>패츌리, 베티버, 통카빈 — 깊고 감각적인 여운.</p>
       </div>
     </div>
   </section>
 
-  <footer>
-    Designed by <span>LEO (강지혁)</span> · © 2025 Chérie de Cognac
-  </footer>
+  <div class="footer">
+    © 2025 Chérie de Cognac by LEO (강지혁). All rights reserved.
+  </div>
+
+  <audio id="campfireSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_d9cfb74d6e.mp3?filename=campfire-crackling-12676.mp3"></audio>
 
   <script>
-    function playSound(){
-      const audio = document.getElementById('fireSound');
-      audio.muted = false;
-      audio.play().catch(()=>{});
-    }
-  </script>
+    const bg = document.getElementById('bg');
+    window.addEventListener('load', () => bg.classList.add('loaded'));
 
+    const btn = document.getElementById('listenBtn');
+    const audio = document.getElementById('campfireSound');
+
+    btn.addEventListener('click', () => {
+      audio.volume = 0.6;
+      audio.loop = true;
+      audio.play().catch(err => console.log(err));
+    });
+
+    // 모바일 자동재생 허용
+    document.body.addEventListener('touchstart', () => {
+      audio.play().catch(()=>{});
+    }, {once:true});
+  </script>
 </body>
 </html>
